--- a/index.html
+++ b/index.html
@@ -6,87 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/fab.logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>this is heading one</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor <b>sit</b> <i>amet.</i></p>
-    <h1>this is heading one</h1>
-    <h2>this is heading two</h2>
-    <h3>this is heading three</h3>
-    <h4>this is heading four</h4>
-    <h5>this is heading five</h5>
-    <h6>this is heading six</h6>
-    <strong>this is strong tag</strong>
-    <a href="https://github.com/">github a jaw</a>
-    <img src="https://www.freepik.com/free-vector/tree_6132448.htm#query=tree&position=2&from_view=keyword"
-        alt=" ths is an image of a tree">
-    <ol>
-        <li>fuska</li>
-        <li>misti</li>
-        <li>chocolate</li>
-    </ol>
-    <ul>
-        <li>fuska</li>
-        <li>misti</li>
-        <li>chocolate</li>
-    </ul>
-    <p>Lorem ipsum, dolor sit amet <small>adipisicing elit. </small>Quae quibusdam dolorum nisi quidem delectus commodi
-        deserunt!</p>
-
-    <h3 id="heading-three">this is heading 3</h3>
-    <h3 class="class-three coding">this is heading 3</h3>
-    <h3 class="coding">this is heading 3</h3>
-    <div class="blog">
-        <h1 class="tour">tour</h1>
-        <small>Lorem ipsum: <span class="span">dolor sit amet</span></small>
-        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, molestiae dolorem! Possimus
-            nisi explicabo
-            voluptates, dolore exercitationem alias mollitia ipsa, dicta blanditiis odit earum expedita amet recusandae
-            voluptatibus id perferendis laborum accusantium nemo ullam ex? Recusandae, reiciendis error quia autem aut
-            nulla debitis in praesentium, labore consequatur qui tempore repudiandae asperiores, facilis rem! Iure sed
-            similique cumque libero ducimus molestiae repellat vero maiores quam non, odit mollitia magnam harum
-            deserunt. Nostrum, quidem pariatur? Et voluptas explicabo totam accusantium. Illum, quos repellat? Vel,
-            ipsum labore non perspiciatis possimus deserunt suscipit doloribus quam accusamus tenetur repudiandae nisi
-            esse perferendis doloremque vero odio!</p>
-        <small>this is small text</small>
-
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, sed? Voluptatibus sint dolore <p>Lorem ipsum
-            dolor sit amet.</p> consequatur
-        dignissimos reprehenderit aspernatur itaque praesentium placeat, eaque quisquam sapiente ducimus tempore eius
-        omnis corporis ex non.
-
-    </div>
-    <div class="blog">
-        <h1 class="tour">tour</h1>
-        <small>Lorem ipsum: <span class="span">dolor sit amet</span></small>
-        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, molestiae dolorem! Possimus
-            nisi explicabo
-            voluptates, dolore exercitationem alias mollitia ipsa, dicta blanditiis odit earum expedita amet recusandae
-            voluptatibus id perferendis laborum accusantium nemo ullam ex? Recusandae, reiciendis error quia autem aut
-            nulla debitis in praesentium, labore consequatur qui tempore repudiandae asperiores, facilis rem! Iure sed
-            similique cumque libero ducimus molestiae repellat vero maiores quam non, odit mollitia magnam harum
-            deserunt. Nostrum, quidem pariatur? Et voluptas explicabo totam accusantium. Illum, quos repellat? Vel,
-            ipsum labore non perspiciatis possimus deserunt suscipit doloribus quam accusamus tenetur repudiandae nisi
-            esse perferendis doloremque vero odio!</p>
-    </div>
-    <div class="blog">
-        <h1 class="tour">tour</h1>
-        <small>Lorem ipsum: <span class="span">dolor sit amet</span></small>
-        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, molestiae dolorem! Possimus
-            nisi explicabo
-            voluptates, dolore exercitationem alias mollitia ipsa, dicta blanditiis odit earum expedita amet recusandae
-            voluptatibus id perferendis laborum accusantium nemo ullam ex? Recusandae, reiciendis error quia autem aut
-            nulla debitis in praesentium, labore consequatur qui tempore repudiandae asperiores, facilis rem! Iure sed
-            similique cumque libero ducimus molestiae repellat vero maiores quam non, odit mollitia magnam harum
-            deserunt. Nostrum, quidem pariatur? Et voluptas explicabo totam accusantium. Illum, quos repellat? Vel,
-            ipsum labore non perspiciatis possimus deserunt suscipit doloribus quam accusamus tenetur repudiandae nisi
-            esse perferendis doloremque vero odio!</p>
-    </div>
-
+    <section id="first-section">
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1><span class="orange-color">Peter Parker</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero In Sha Allah.</p>
+            <a class="link-button" href="https://www.linkedin.com/feed/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="this is a pic of jhankar mahabub">
+        </div>
+    </section>
+    <section id="second-section">
+        <div class="another-area">
+            <img src="images/jhankar2.png" alt="this is an another pic of jhankar mahabub">
+        </div>
+        <div class="another-area">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to
+                make simple website. My goal is to build 3 websites and learn advanced topics</p>
+            <a class="download-button" href="https://www.linkedin.com/feed/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
